# cascadr

./: .dockerignore  CONTRACT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.dist  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
src/: lib.rs  main.rs
tests/: cache_integrity.rs  stderr_leak.rs
tests/fixtures/: provider_unavailable_cases.json
